Header HTML terminado

--- a/index.html
+++ b/index.html
@@ -7,16 +7,26 @@
     <title>Primer TP Diseño Web</title>
 </head>
 <body>
-    <header>
-        <div>
+    <header class="header">
+        <div class="logo">
+            <img class="logogo" src="Imagenes/flor.png" alt="Logo">
+            <p class="logotxt">Cardpay</p>
         </div>
 
-        <nav>
+        <nav class="navbar">
+            <ul class="links">
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Service</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Service</a></li>
+            </ul>
         </nav>
 
-        <a>
+        <a class="btn">
+            <button class="boton1">Get the app</button>
         </a>
     </header>
+    
     <!--FIN DEL HEADER-->
     <br><br><br>
     <!--COMIENZO DEL BODY-->
