--- a/index.html
+++ b/index.html
@@ -84,11 +84,21 @@
 
     <!--COMIENZO DEL SECTION 3-->    
 
-    <section>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+    <section class="seccion3">
+
+        <div class="contenedorimg">
+            <img class="logoamazon" src="Imagenes/amazonn.png" alt="Logo de Amazon">
+        </div>
+        
+        <div class="contenedorimg">
+            <img  class="logogoogle" src="Imagenes/googlee.png" alt="Logo de Google">
+        </div>
+        <div class="contenedorimg">
+            <img class="logofacebook" src="Imagenes/Facebook-Logo.png" alt="Logo de Facebook">
+        </div>
+        <div class="contenedorimg">
+            <img class="logosamsung" src="Imagenes/samsungg.png" alt="Logo de Samsung">
+        </div>
     </section>
    
 </body>
